[Style] fix white color when scoll page overflow

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -22,3 +22,7 @@
     -webkit-overflow-scrolling: touch;
     overflow: auto;
 }
+
+body {
+    @apply bg-background
+}
